--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>                         
   <script src='/build/historysniff.js'></script>
   <script>
-    var websites = [
+    var apps = [
       {"name": "facebook", "url": "https://fbstatic-a.akamaihd.net/rsrc.php/v2/yh/r/xQ0DwmqUr-m.png"},
       {"name": "twitter", "url": "https://abs.twimg.com/a/1375759071/t1/img/twitter_web_sprite_icons.png"}
     ];
@@ -20,7 +20,7 @@
     historysniff.bind('nomatch', function(result) {
       console.log("nomatch", result);
     });
-    historysniff.check(websites);
+    historysniff.check(apps);
   </script>
 </body>
 </html>
