Adjust ms_measurement

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       {"name": "twitter", "url": "https://abs.twimg.com/a/1375759071/t1/img/twitter_web_sprite_icons.png"}
     ];
 
+    historysniff.ms_measurement = 10;
     historysniff.bind('match', function(result) {
       console.log("match", result);
     });
